--- a/backendd/package.json
+++ b/backendd/package.json
@@ -15,5 +15,8 @@
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "mongoose": "^6.8.2"
+  },
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.2"
   }
 }
